--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@
 /config/master.key
 
 .DS_store
-.rubocop.yml
-.rubocop_todo.yml
+# .rubocop.yml
+# .rubocop_todo.yml
 .ruby-version
 /vendor/bundle/
