--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,15 @@
 version: 2.1
 orbs:
-  ruby: circleci/ruby@0.1.2
+  ruby: circleci/ruby@0.1.2 
 
 jobs:
   build:
     docker:
-      # specify the version you desire here
-      - image: circleci/ruby:2.5.7-node-browsers
-        environment:
-          BUNDLER_VERSION: 2.1.4
-          RAILS_ENV: test
-          PGHOST: 127.0.0.1
-          PGUSER: postgres
-    working_directory: ~/FitNotes
+      - image: circleci/ruby:2.6.3-stretch-node
+    executor: ruby/default
     steps:
       - checkout
       - run:
           name: Which bundler?
           command: bundle -v
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "Gemfile.lock" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-      - run: bundle install --jobs=4 --retry=3 --path vendor/bundle
-      - run:
-          name: Yarn のインストール
-          command: yarn install
-      - save_cache:
-          paths:
-            - ./vendor/bundle
-          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-      # Rubocop
-      - run:
-          name: Rubocop
-          command: bundle exec rubocop
+      - ruby/bundle-install
