--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,8 @@ jobs:
       - checkout
       - run:
           name: Which bundler?
-          command: bundle -v
-            gem install bundler:2.1.4
+          command: gem install bundler -v 2.1.4
+            bundle -v
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "Gemfile.lock" }}
