--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,9 @@ jobs:
       - checkout
       - run:
           name: Which bundler?
-          command: |
-            gem install bundler -v 2.1.4
-            bundle -v
+          # command: |
+          #   gem install bundler -v 2.1.4
+          command: bundle -v
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "Gemfile.lock" }}
