--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/ruby:2.5.7-node-browsers
+      executor: ruby/default
         environment:
           BUNDLER_VERSION: 2.1.4
           RAILS_ENV: test
@@ -20,6 +21,7 @@ jobs:
           command: |
             gem install bundler -v 2.1.4
             bundle -v
+      - ruby/bundle-install
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "Gemfile.lock" }}
