--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,12 @@ jobs:
           paths:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-      # Rubocop
-      # - run:
-      #     name: Rubocop
-      #     command: bundle exec rubocop
+      Rubocop
+      - run:
+          name: Rubocop
+          command: bundle exec rubocop
+      - run: bundle exec rake db:create
+      - run: bundle exec rake db:schema:load
+      - run:
+          name: Rspec
+          command: bundle exec rspec spec/ --format documentation
