--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,4 +42,9 @@ jobs:
       - run: bundle exec rake db:schema:load
       - run:
           name: Rspec
-          command: bundle exec rspec spec/ --format documentation
+          command: |
+            bundle exec rspec --profile 10 \
+                              --format RspecJunitFormatter \
+                              --out test_results/rspec.xml \
+                              --format progress \
+                              $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
