Circleci: run rspec

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,8 +38,16 @@ jobs:
       # - run:
       #     name: Rubocop
       #     command: bundle exec rubocop
-      - run: bundle exec rake db:create
-      - run: bundle exec rake db:schema:load
+      # - run: bundle exec rake db:create
+      # - run: bundle exec rake db:schema:load
+      - run:
+          name: DB の待機
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m
+
+      - run:
+          name: データベースのセットアップ
+          command: bin/rails db:schema:load --trace
+
       - run:
           name: Rspec
           command: |
@@ -48,3 +56,5 @@ jobs:
                               --out test_results/rspec.xml \
                               --format progress \
                               $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
+      - store_test_results:
+      path: test_results
