--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,9 +27,9 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
       - run: bundle install --jobs=4 --retry=3 --path vendor/bundle
-      - run:
-          name: Yarn のインストール
-          command: yarn install
+      # - run:
+      #     name: Yarn のインストール
+      #     command: yarn install
       - save_cache:
           paths:
             - ./vendor/bundle
@@ -42,7 +42,7 @@ jobs:
       # - run: bundle exec rake db:schema:load
       - run:
           name: DB の待機
-          command: dockerize -wait tcp://localhost:5432 -timeout 2m
+          command: dockerize -wait tcp://127.0.0.1:5432 -timeout 2m
 
       - run:
           name: データベースのセットアップ
