Trying to fix the issue

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,9 @@ jobs:
           BUNDLER_VERSION: 2.1.4
           RAILS_ENV: test
           PGHOST: 127.0.0.1
-          PGUSER: postgres
+          # PGUSER: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
     working_directory: ~/FitNotes
     steps:
       - checkout
