Trying to fix the issue

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
         environment:
           BUNDLER_VERSION: 2.1.4
           RAILS_ENV: test
-          PGHOST: 127.0.0.1
+          PGHOST: db
           # PGUSER: postgres
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: password
