--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: 127.0.0.1
+  host: db
   username: postgres
   password: password
   pool: 5
