--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,10 +36,10 @@ jobs:
           paths:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-      # Rubocop
-      # - run:
-      #     name: Rubocop
-      #     command: bundle exec rubocop
+      Rubocop
+      - run:
+          name: Rubocop
+          command: bundle exec rubocop
       # - run: bundle exec rake db:create
       # - run: bundle exec rake db:schema:load
 
